--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: '16.x'
       - run: npm install
-      - run: npm run build:prod
+      - run: npm run build
       - uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting
