--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: '16.x'
+      - run: echo '${{ secrets.ENVIRONMENT }}' > src/environments/environment.ts
       - run: npm install
       - run: npm run build
       - uses: w9jds/firebase-action@master
