--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,11 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: '16.x'
-      - run: echo ${{ secrets.ENVIRONMENT_FILE }} > src/environments/environment.ts
-      - run: ls -lh src/environments
-      - run: cat src/environments/environment.ts
+      - run: pwd
+      - run: mkdir ./src/environments/
+      - run: echo ${{ secrets.ENVIRONMENT_FILE }} > ./src/environments/environment.ts
+      - run: ls -lh ./src/environments
+      - run: cat ./src/environments/environment.ts
       # - run: npm install
       # - run: npm run build
       # - uses: w9jds/firebase-action@master
