--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: '16.x'
-      - run: pwd
-      - run: mkdir ./src/environments/
+      - run: ls
+      - run: mkdir -p ./src/environments/
       - run: echo ${{ secrets.ENVIRONMENT_FILE }} > ./src/environments/environment.ts
       - run: ls -lh ./src/environments
       - run: cat ./src/environments/environment.ts
