add rewrite redirection

--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,10 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "cleanUrls": true
+    "rewrites": [{
+      "source": "**",
+      "destination": "/index.html"
+    }]
   
   },
   "functions": {
