--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
       - run: npm run build:prod
       - uses: w9jds/firebase-action@master
         with:
-          args: deploy --only hosting
+          args: hosting:channel:deploy dev
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
